<resources>
    <string name="app_name">TableObv</string>
    <string name="myads">Мои объявления</string>
    <string name="cars_ads">Машины</string>
    <string name="smart">Телефоны</string>
    <string name="pc_ads">Компьютеры</string>
    <string name="bitovaya_tex">Бытовая техника</string>
    <string name="sign_up">Регистрация</string>
    <string name="sig_in">Вход</string>
    <string name="sign_out">Выход</string>
    <string name="accaunt">Аккаунт</string>
    <string name="sign_up_button">Зарегистрироваться</string>
    <string name="sign_in_button">Войти</string>
    <string name="sign_in_or_sign_up">Войдите или зарегистрируйтесь</string>

    <!--Edit activity -->
    <string name="edit_ac_title">Название</string>
    <string name="edit_ac_price">Цена</string>
    <string name="edit_ac_desc">Описание</string>
    <string name="edit_ac_tel">Телефон</string>
</resources>