<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:title="@string/myads"
            android:id="@+id/id_my_ads"
            android:icon="@drawable/ic_my_ads"/>


        <item android:title="@string/cars_ads"
            android:id="@+id/id_cars_ads"
            android:icon="@drawable/ic_cars_ads"/>


        <item android:title="@string/pc_ads"
            android:id="@+id/id_pc_ads"
            android:icon="@drawable/ic_pc_ads"/>

        <item android:title="@string/smart"
            android:id="@+id/smart"
            android:icon="@drawable/ic_smartphone_ads"/>


        <item android:title="@string/bitovaya_tex"
            android:id="@+id/id_dm_ads"
            android:icon="@drawable/ic_dm_ads"/>



    </group>

    <item android:title="@string/accaunt" >
        <menu>
            <item android:title="@string/sign_up"
                android:id="@+id/id_sing_up"
                android:icon="@drawable/ic_sign_up_ads"/>


            <item android:title="@string/sig_in"
                android:id="@+id/id_sign_in"
                android:icon="@drawable/ic_sign_in_ads"/>


            <item android:title="@string/sign_out"
                android:id="@+id/id_sign_out"
                android:icon="@drawable/ic_sign_out_ads"/>
        </menu>

    </item>

</menu>