<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageProduct"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_my_ads"
        android:src="@drawable/ic_smartphone_ads"
        />


    <EditText
        android:id="@+id/idTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/edit_ac_title"
        android:inputType="textPersonName"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageProduct"
        app:layout_constraintTop_toBottomOf="@+id/imageProduct" />

    <EditText
        android:id="@+id/idPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_ac_price"
        android:inputType="textPersonName"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="@+id/idTitle"
        app:layout_constraintStart_toStartOf="@+id/idTitle"
        app:layout_constraintTop_toBottomOf="@+id/idTitle" />

    <EditText
        android:id="@+id/idPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/edit_ac_tel"
        android:inputType="textPersonName"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="@+id/idPrice"
        app:layout_constraintStart_toStartOf="@+id/idPrice"
        app:layout_constraintTop_toBottomOf="@+id/imageProduct" />

    <EditText
        android:id="@+id/idPhone2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/edit_ac_desc"
        android:inputType="textPersonName"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/idPhone"
        app:layout_constraintStart_toStartOf="@+id/idPhone"
        app:layout_constraintTop_toBottomOf="@+id/idPhone"
        app:layout_constraintVertical_bias="0.527" />

</androidx.constraintlayout.widget.ConstraintLayout>